--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ ACCESS_TOKEN_EXPIRE_MINUTES=15
 # DATABASE_URL="sqlite:///./app/database.db"
 
 # Docker Postgres 
-DATABASE_URL="postgresql://POSTGRES_USER:POSTGRES_PASSWORD@db:5432/POSTGRES_DB"
+DATABASE_URL=postgresql://user:password@db:5432/dbname
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
