The realy last improving of the Readme file

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,22 @@
 # --- Security ---
-# Generate a key using: openssl rand -hex 32
+# Generate a secure key using one of these commands:
+# - openssl rand -hex 32
+# - python -c "import secrets; print(secrets.token_hex(32))"
 SECRET_KEY="replace_this_with_a_secure_random_string"
 ALGORITHM="HS256"
 ACCESS_TOKEN_EXPIRE_MINUTES=15
 
-# --- Database ---
-# Local SQLite (Use when running fastAPI app alone)
-# DATABASE_URL="sqlite:///./app/database.db"
+# --- Database Configuration ---
+# Uncomment the appropriate DATABASE_URL for your setup:
 
-# Docker Postgres 
-DATABASE_URL=postgresql://user:password@db:5432/dbname
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+# Local SQLite (for development without Docker)
+DATABASE_URL="sqlite:///./app/database.db"
+
+# PostgreSQL via Docker (for production/Docker setup)
+# DATABASE_URL=postgresql://user:password@db:5432/dbname
+# POSTGRES_USER=user
+# POSTGRES_PASSWORD=password
+# POSTGRES_DB=dbname
 
 # --- Limits ---
 MAX_LETTERS_ADMIN=1000000
