--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,12 +29,12 @@ jobs:
     - name: Install dependencies
       # This installs both project and dev dependencies from pyproject.toml
       run: uv sync --frozen
-
+    
     - name: Lint with flake8
       # We use 'uv run' to execute flake8 within the project environment
       run: |
         uv pip install flake8
-        uv run flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        uv run flake8 app/ test/ --count --select=E9,F63,F7,F82 --show-source --statistics
 
     - name: Test with pytest
       # This will run pytest using the virtual environment managed by uv
